--- a/style/scss/layout/_header.scss
+++ b/style/scss/layout/_header.scss
@@ -13,6 +13,7 @@ header {
   position: sticky;
   left: 0;
   top: 0;
+  gap: 30px;
 
   .left-group {
     display: flex;
@@ -22,6 +23,10 @@ header {
     gap: 20px;
 
     h1.logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
       a {
         display: inline-block;
         width: 28px;
@@ -68,8 +73,9 @@ header {
       gap: 1.5rem;
       width: 100%;
       font-family: var(--font-english);
-
+      
       @include mixins.respond(lg){
+        justify-content: space-between;
         flex-direction: row;
         flex-wrap: wrap;
       }
@@ -79,7 +85,8 @@ header {
         position: relative;
 
         @include mixins.respond(lg){
-          width: 133px;
+          width: auto;
+          min-width: 5rem;
           height: 44px;
           text-align: center;
           line-height: 44px;
