--- a/style/scss/base/_base.scss
+++ b/style/scss/base/_base.scss
@@ -6,6 +6,8 @@
 
 html {
   font-size: 100%;
+  // font-size: xx-large;
+
 }
 
 body {
@@ -21,7 +23,7 @@ body {
 
     section{
       width: 100%;
-      height: 300px;
+      min-height: 250px;
     }
 
 
