--- a/style/scss/components/_scroll-top-button.scss
+++ b/style/scss/components/_scroll-top-button.scss
@@ -10,11 +10,10 @@ button.scroll-top {
   right: 1rem;
   bottom: 2.5rem;
 
-  width: 3rem;
-  height: 3rem;
-  border-radius: 3rem;
+  width: 48px;
+  height: 48px;
+  border-radius: 48px;
   box-sizing: border-box;
-  // border: 2px solid var(--color-purple-400);
   background: var(--gradient-skyblue-purple-wide-light);
   color: var( --color-white-alpha-85);
   font-size: 20px;
