--- a/style/scss/components/_toggle-switch.scss
+++ b/style/scss/components/_toggle-switch.scss
@@ -6,7 +6,7 @@
 .toggle-switch {
   display: inline-flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 8px;
   position: relative;
 
   &__input {
@@ -29,7 +29,7 @@
       }
 
       &::before {
-        transform: translateX(1rem);
+        transform: translateX(16px);
       }
     }
 
@@ -43,7 +43,7 @@
   &__label {
     display: inline-flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 8px;
     cursor: pointer;
   }
 
@@ -55,8 +55,8 @@
 
   &__slider {
     position: relative;
-    width: 2.5rem;
-    height: 1.5rem;
+    width: 40px;
+    height: 24px;
     background-color: transparent;
     border: 1px solid var(--color-gray-900);
     box-sizing: border-box;
@@ -67,10 +67,10 @@
     &::before {
       content: '';
       position: absolute;
-      width: 1rem;
-      height: 1rem;
-      left: 0.1875rem;
-      top: 0.1875rem;
+      width: 16px;
+      height: 16px;
+      left: 3px;
+      top: 3px;
       background-color: var(--color-gray-900);
       border-radius: 50%;
       transition: transform 0.2s ease;
