--- a/style/scss/sections/_hero.scss
+++ b/style/scss/sections/_hero.scss
@@ -50,7 +50,11 @@ section.hero {
       position: absolute;
       font-family: var(--font-english);
       font-weight: 300;
-      font-size: 36px;
+      font-size: 20px;
+      
+      @include mixins.respond(md){
+        font-size: 36px;
+      }
     }
 
     &__shapes {
@@ -71,12 +75,17 @@ section.hero {
     }
 
     &__shape {
-      width: 30px;
-      height: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 34px;
+      height: 34px;
+      padding: 0 4px;
 
       @include mixins.respond(md) {
         width: 50px;
         height: 50px;
+        padding: 0;
       }
     }
   }
