--- a/style/scss/base/_base.scss
+++ b/style/scss/base/_base.scss
@@ -20,13 +20,13 @@ body {
 
 
   main{
-
+    margin-top: -44px;
+    
     section{
       width: 100%;
       min-height: 250px;
+      padding: 0 16px;
     }
-
-
   }
 }
 
