--- a/style/scss/sections/_feature.scss
+++ b/style/scss/sections/_feature.scss
@@ -1,5 +1,5 @@
 @use '../base/variables';
 
 section.feature{
-  background: var(--color-pink-200-alpha-50);
+  background: var(--color-bg-feature);
 }
