2026-02-19 aboutme 스타일 작업중

--- a/style/scss/components/_toggle-switch.scss
+++ b/style/scss/components/_toggle-switch.scss
@@ -50,7 +50,8 @@
   &__text {
     font-size: 0.875rem;
     line-height: 1;
-    user-select: none;
+    user-select: none; // 드래그 블록 막기
+    color: var(--color-black);
   }
 
   &__slider {
