--- a/style/css/main.css
+++ b/style/css/main.css
@@ -87,6 +87,9 @@ table {
   /* ===== 2. Color Palette (Raw values) ===== */
   --color-black: #000;
   --color-gray-900: #333;
+  --color-gray-800: #434343;
+  --color-gray-400: #7d7d7d;
+  --color-gray-200: #d9d9d9;
   --color-gray-100: #f5f5f5;
   --color-white: #fff;
   --color-white-alpha-85: rgba(255, 255, 255, 0.85);
@@ -115,28 +118,39 @@ table {
   --gradient-pink-skyblue: linear-gradient(180deg, var(--color-pink-200-alpha-50) 0%, var(--color-skyblue-200) 85%);
   --gradient-pink-skyblue-fade-in: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-pink-200-alpha-60) 50%, var(--color-skyblue-200) 85%);
   --gradient-gray-fade-in: linear-gradient(180deg, rgba(253, 251, 251, 0.4) 0%, rgba(235, 237, 238, 0.7) 85%);
+  --gradient-gray-fade-in-dark: linear-gradient(180deg, rgba(51, 51, 51, 0.4) 0%, #434343b3 85%);
   /* ===== 4. Semantic Tokens ===== */
   /* 전역 포커스 링 색상 */
   --color-focus-ring: var(--color-magenta);
   /*  배경색 */
   --color-bg-primary: var(--color-white);
-  --color-bg-footer: var(--color-gray-900);
   --color-bg-aboutme: var(--gradient-skyblue-pink);
   --color-bg-feature: var(--color-pink-200-alpha-50);
   --color-bg-thanks: var(--gradient-pink-skyblue-fade-in);
+  --color-bg-footer: var(--color-gray-900);
   /* 글자색 */
   --color-text-primary: var(--color-gray-900);
   --color-text-inverse: var(--color-white);
   --color-text-nav-hover: var(--color-purple-500);
+  --color-text-emphasis: var(--color-purple-500);
+  --color-text-weak: var(--color-gray-400);
   /* 아이콘색 */
   --color-icon: var(--color-gray-900);
   --color-icon-hover: var(--color-purple-500);
 }
 
-/* 다크모드 */
+/* ===== 5. Theme Dark ===== */
 [data-theme=dark] {
+  /*  배경색 */
   --color-bg-primary: var(--color-gray-900);
+  --color-bg-aboutme: var(--color-gray-800);
+  --color-bg-feature: var(--color-gray-800);
+  --color-bg-thanks: var(--gradient-gray-fade-in-dark);
+  --color-bg-footer: var(--color-black);
+  /* 글자색 */
   --color-text-primary: var(--color-gray-100);
+  --color-text-inverse: var(--color-gray-900);
+  --color-text-weak: var(--color-gray-400);
 }
 
 /* ===== 반응형 min-width 변수 ===== */
@@ -259,6 +273,7 @@ header nav.gnb ul.gnb-menu {
   gap: 1.5rem;
   width: 100%;
   font-family: var(--font-english);
+  color: var(--color-black);
 }
 @media (min-width: 1280px) {
   header nav.gnb ul.gnb-menu {
@@ -353,7 +368,7 @@ footer {
   height: 1.5rem;
   background: var(--color-bg-footer);
   font-size: 0.875rem;
-  color: var(--color-text-inverse);
+  color: var(--color-gray-200);
 }
 
 /* 5. Components */
@@ -431,6 +446,7 @@ button.scroll-top.show {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  color: var(--color-black);
 }
 .toggle-switch__slider {
   position: relative;
@@ -480,9 +496,10 @@ section.hero .hero-name {
     gap: 24px;
   }
 }
-section.hero .hero-name img {
+section.hero .hero-name svg {
   width: 20px;
   height: 20px;
+  fill: var(--color-icon);
 }
 section.hero .hero-name strong {
   font-family: var(--font-english);
@@ -596,13 +613,41 @@ section.hero .sticker .sticker__inner span::after {
   content: "";
   width: 1px;
   height: 40px;
-  background-color: var(--color-white);
+  background-color: var(--color-text-inverse);
 }
 
 section.about-me {
+  display: flex;
+  gap: 100px;
+  padding: 150px 16px 100px;
   background: var(--color-bg-aboutme);
 }
-section.about-me .left-group__top .photo-box {
+section.about-me .left-group__top {
+  position: relative;
+  margin-bottom: 20px;
+}
+section.about-me .left-group__top h2 {
+  position: absolute;
+  left: 0;
+  top: 60px;
+  font-size: 64px;
+  font-weight: 700;
+  text-align: right;
+  line-height: 0.65;
+}
+section.about-me .left-group__top h2::before {
+  position: absolute;
+  left: 66px;
+  top: -38px;
+  display: block;
+  content: "";
+  width: 50px;
+  height: 45px;
+  background-image: url("../../../images/thumb-up.svg");
+  background-repeat: none;
+}
+section.about-me .left-group__top .photobox {
+  position: relative;
   width: 250px;
   height: 400px;
   box-sizing: border-box;
@@ -611,15 +656,47 @@ section.about-me .left-group__top .photo-box {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  position: relative;
 }
-section.about-me .left-group__top .photo-box .img {
+section.about-me .left-group__top .photobox::after {
+  position: absolute;
+  right: 40px;
+  bottom: 40px;
+  display: block;
+  content: "";
+  width: 20px;
+  height: 19px;
+  background-image: url("../../../images/heart-red.svg");
+  background-repeat: none;
+}
+section.about-me .left-group__top .photobox .img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+section.about-me .left-group__bottom p {
+  font-size: 0.75rem;
+  text-align: center;
+  margin-bottom: 16px;
+}
+section.about-me .left-group__bottom .links {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+section.about-me .left-group__bottom .links::before {
+  position: absolute;
+  left: 50%;
+  top: -8px;
+  transform: translateX(-50%);
+  display: block;
+  content: "";
+  width: 10px;
+  height: 1px;
+  background-color: var(--color-text-primary);
 }
 section.about-me .left-group__bottom .links a svg {
   fill: var(--color--icon);
@@ -629,6 +706,63 @@ section.about-me .left-group__bottom .links a svg {
     fill: var(--color-icon-hover);
   }
 }
+section.about-me .intro__con h3 {
+  font-family: var(--font-english);
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: var(--color-text-emphasis);
+  margin-bottom: 30px;
+}
+section.about-me .intro__con--who .contents > strong {
+  display: block;
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin-bottom: 12px;
+}
+section.about-me .intro__con--who .contents .textbox {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+section.about-me .intro__con--who .contents .textbox > div {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  font-size: 0.875rem;
+}
+section.about-me .intro__con--who .contents .textbox > div > p {
+  display: flex;
+  gap: 16px;
+}
+section.about-me .intro__con--who .contents .textbox > div > p span {
+  font-weight: 700;
+}
+section.about-me .intro__con--skills .contents {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+section.about-me .intro__con--skills .contents > p::before {
+  display: block;
+  content: "";
+  width: 10px;
+  height: 1px;
+  background-color: var(--color-text-weak);
+  margin-bottom: 20px;
+}
+section.about-me .intro__con--skills .contents > p > span {
+  display: inline-block;
+  padding: 0.25rem 0.825rem;
+  border: 1px solid var(--color-text-weak);
+  transform: skewX(-8deg);
+  margin: 0.2rem 0.05rem;
+}
+section.about-me .intro__con--history .contents {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 section.feature {
   background: var(--color-bg-feature);
 }
