--- a/style/scss/base/_variables.scss
+++ b/style/scss/base/_variables.scss
@@ -9,6 +9,9 @@
   /* ===== 2. Color Palette (Raw values) ===== */
   --color-black: #000;
   --color-gray-900: #333;
+  --color-gray-800: #434343;
+  --color-gray-400: #7d7d7d;
+  --color-gray-200: #d9d9d9;
   --color-gray-100: #f5f5f5;
   --color-white: #fff;
   --color-white-alpha-85: rgba(255, 255, 255, 0.85);
@@ -47,38 +50,51 @@
   --gradient-pink-skyblue-fade-in: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-pink-200-alpha-60) 50%, var(--color-skyblue-200) 85%);
 
   --gradient-gray-fade-in: linear-gradient(180deg, rgba(253, 251, 251, 0.4) 0%, rgba(235, 237, 238, 0.7) 85%);
+  --gradient-gray-fade-in-dark: linear-gradient(180deg, rgba(51, 51, 51, 0.4) 0%, #434343b3 85%);
 
 
 
   /* ===== 4. Semantic Tokens ===== */
-
   /* 전역 포커스 링 색상 */
   --color-focus-ring: var(--color-magenta);
 
   /*  배경색 */
   --color-bg-primary: var(--color-white);
-  --color-bg-footer: var(--color-gray-900);
   --color-bg-aboutme: var(--gradient-skyblue-pink);
   --color-bg-feature: var(--color-pink-200-alpha-50);
   --color-bg-thanks: var(--gradient-pink-skyblue-fade-in);
+  --color-bg-footer: var(--color-gray-900);
 
   /* 글자색 */
   --color-text-primary: var(--color-gray-900);
   --color-text-inverse: var(--color-white);
   --color-text-nav-hover: var(--color-purple-500);
+  --color-text-emphasis: var(--color-purple-500);
+  --color-text-weak: var(--color-gray-400);
 
   /* 아이콘색 */
   --color-icon: var(--color-gray-900);
   --color-icon-hover: var(--color-purple-500);
 }
 
-/* 다크모드 */
+
+
+/* ===== 5. Theme Dark ===== */
 [data-theme="dark"] {
+  /*  배경색 */
   --color-bg-primary: var(--color-gray-900);
+  --color-bg-aboutme: var(--color-gray-800);
+  --color-bg-feature: var(--color-gray-800);
+  --color-bg-thanks: var(--gradient-gray-fade-in-dark);
+  --color-bg-footer: var(--color-black);
+  
+  /* 글자색 */
   --color-text-primary: var(--color-gray-100);
-
-
+  --color-text-inverse: var(--color-gray-900);
+  --color-text-weak: var(--color-gray-400);
 }
+
+
 
 /* ===== 반응형 min-width 변수 ===== */
 $breakpoints: (md: 800px, lg: 1280px);
