--- a/style/scss/layout/_footer.scss
+++ b/style/scss/layout/_footer.scss
@@ -10,5 +10,5 @@ footer{
   height: 1.5rem;
   background: var(--color-bg-footer);
   font-size: 0.875rem;
-  color: var(--color-text-inverse);
+  color: var(--color-gray-200);
 }
