--- a/style/css/main.css
+++ b/style/css/main.css
@@ -107,16 +107,15 @@ table {
   --color-skyblue-200: #E3EEFF;
   --color-pink-400: #efc9d0;
   --color-pink-200: #F3E7E9;
-  --color-pink-200-alpha-60: rgba(243, 231, 233, 0.6);
-  --color-pink-200-alpha-50: rgba(243, 231, 233, 0.5);
+  --color-pink-150: #F9F3F4;
   --color-magenta: #ef3080;
   /* ===== 3. Gradients (Composition) ===== */
   --gradient-purple-skyblue-wide: linear-gradient(0deg, var(--color-skyblue-500) 0%, var(--color-purple-500) 85%);
   --gradient-purple-skyblue-narrow: linear-gradient(90deg, var(--color-skyblue-500) 20%, var(--color-purple-500) 80%);
   --gradient-skyblue-purple-wide-light: linear-gradient(180deg, var(--color-skyblue-400) 0%, var(--color-purple-400-alpha-60) 85%);
-  --gradient-skyblue-pink: linear-gradient(0deg, var(--color-pink-200-alpha-50) 0%, var(--color-skyblue-200) 85%);
-  --gradient-pink-skyblue: linear-gradient(180deg, var(--color-pink-200-alpha-50) 0%, var(--color-skyblue-200) 85%);
-  --gradient-pink-skyblue-fade-in: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-pink-200-alpha-60) 50%, var(--color-skyblue-200) 85%);
+  --gradient-skyblue-pink: linear-gradient(0deg, var(--color-pink-150) 0%, var(--color-skyblue-200) 85%);
+  --gradient-pink-skyblue: linear-gradient(180deg, var(--color-pink-150) 0%, var(--color-skyblue-200) 85%);
+  --gradient-pink-skyblue-fade-in: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-pink-150) 50%, var(--color-skyblue-200) 85%);
   --gradient-gray-fade-in: linear-gradient(180deg, rgba(253, 251, 251, 0.4) 0%, rgba(235, 237, 238, 0.7) 85%);
   --gradient-gray-fade-in-dark: linear-gradient(180deg, rgba(51, 51, 51, 0.4) 0%, #434343b3 85%);
   /* ===== 4. Semantic Tokens ===== */
@@ -125,7 +124,7 @@ table {
   /*  배경색 */
   --color-bg-primary: var(--color-white);
   --color-bg-aboutme: var(--gradient-skyblue-pink);
-  --color-bg-feature: var(--color-pink-200-alpha-50);
+  --color-bg-feature: var(--color-pink-150);
   --color-bg-thanks: var(--gradient-pink-skyblue-fade-in);
   --color-bg-footer: var(--color-gray-900);
   /* 글자색 */
@@ -168,9 +167,6 @@ body {
   line-height: 1.5;
   color: var(--color-text-primary);
   background-color: var(--color-bg-primary);
-}
-body main {
-  margin-top: -44px;
 }
 body main section {
   width: 100%;
@@ -482,7 +478,7 @@ section.hero {
   min-height: 650px;
   max-height: 800px;
   box-sizing: border-box;
-  padding: 100px 0 150px;
+  padding: 56px 0 150px;
   text-align: center;
 }
 section.hero .hero-name {
@@ -577,6 +573,7 @@ section.hero .sticker {
   left: 50%;
   bottom: 0;
   transform: translate(-50%, 50%);
+  z-index: 10;
 }
 section.hero .sticker .sticker__inner {
   display: flex;
@@ -617,77 +614,101 @@ section.hero .sticker .sticker__inner span::after {
 }
 
 section.about-me {
-  display: flex;
-  gap: 100px;
-  padding: 150px 16px 100px;
   background: var(--color-bg-aboutme);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 130px 16px 100px;
 }
-section.about-me .left-group__top {
+@media (min-width: 800px) {
+  section.about-me {
+    flex-direction: row;
+    gap: 50px;
+    padding: 200px 16px 150px;
+    height: 100vh;
+  }
+}
+@media (min-width: 1280px) {
+  section.about-me {
+    gap: 100px;
+  }
+}
+section.about-me .left-group {
   position: relative;
   margin-bottom: 20px;
 }
-section.about-me .left-group__top h2 {
+@media (min-width: 800px) {
+  section.about-me .left-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 0 0 250px;
+  }
+}
+@media (min-width: 1280px) {
+  section.about-me .left-group {
+    flex: 0 0 358px;
+  }
+}
+section.about-me .left-group h2 {
+  display: inline-block;
   position: absolute;
   left: 0;
   top: 60px;
-  font-size: 64px;
-  font-weight: 700;
   text-align: right;
+  font-size: 54px;
+  font-weight: 700;
   line-height: 0.65;
 }
-section.about-me .left-group__top h2::before {
+@media (min-width: 1280px) {
+  section.about-me .left-group h2 {
+    font-size: 64px;
+  }
+}
+section.about-me .left-group h2::before {
   position: absolute;
-  left: 66px;
+  left: 56px;
   top: -38px;
   display: block;
   content: "";
   width: 50px;
   height: 45px;
   background-image: url("../../../images/thumb-up.svg");
+  background-size: contain;
   background-repeat: none;
 }
-section.about-me .left-group__top .photobox {
-  position: relative;
-  width: 250px;
-  height: 400px;
-  box-sizing: border-box;
-  border-radius: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+@media (min-width: 1280px) {
+  section.about-me .left-group h2::before {
+    width: 50px;
+    height: 45px;
+    left: 66px;
+    top: -38px;
+  }
 }
-section.about-me .left-group__top .photobox::after {
-  position: absolute;
-  right: 40px;
-  bottom: 40px;
-  display: block;
-  content: "";
-  width: 20px;
-  height: 19px;
-  background-image: url("../../../images/heart-red.svg");
-  background-repeat: none;
+@media (min-width: 1280px) {
+  section.about-me .left-group .contents {
+    margin-left: 33%;
+  }
 }
-section.about-me .left-group__top .photobox .img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+section.about-me .left-group .contents > img {
+  border-radius: 200px;
 }
-section.about-me .left-group__bottom p {
+section.about-me .left-group .contents .bottom {
+  margin-top: 20px;
+}
+section.about-me .left-group .contents .bottom p {
   font-size: 0.75rem;
   text-align: center;
   margin-bottom: 16px;
 }
-section.about-me .left-group__bottom .links {
+section.about-me .left-group .contents .bottom .links {
   position: relative;
   display: flex;
   justify-content: center;
   gap: 12px;
 }
-section.about-me .left-group__bottom .links::before {
+section.about-me .left-group .contents .bottom .links::before {
   position: absolute;
   left: 50%;
   top: -8px;
@@ -698,51 +719,79 @@ section.about-me .left-group__bottom .links::before {
   height: 1px;
   background-color: var(--color-text-primary);
 }
-section.about-me .left-group__bottom .links a svg {
+section.about-me .left-group .contents .bottom .links a svg {
   fill: var(--color--icon);
 }
 @media (hover: hover) and (pointer: fine) {
-  section.about-me .left-group__bottom .links a:hover svg {
+  section.about-me .left-group .contents .bottom .links a:hover svg {
     fill: var(--color-icon-hover);
   }
 }
-section.about-me .intro__con h3 {
+section.about-me .right-group .pin-wrap {
+  overflow: hidden;
+  background-color: aqua;
+}
+@media (min-width: 800px) {
+  section.about-me .right-group .pin-wrap {
+    max-width: 530px;
+  }
+}
+section.about-me .right-group .pin-wrap .intro {
+  display: flex;
+  flex-wrap: nowrap;
+}
+section.about-me .right-group .pin-wrap .intro__con {
+  flex: 0 0 100%;
+}
+@media (min-width: 800px) {
+  section.about-me .right-group .pin-wrap .intro__con {
+    padding-right: 100px;
+    box-sizing: border-box;
+  }
+}
+section.about-me .right-group .pin-wrap .intro__con h3 {
   font-family: var(--font-english);
   font-weight: 400;
   font-size: 1.5rem;
   color: var(--color-text-emphasis);
   margin-bottom: 30px;
 }
-section.about-me .intro__con--who .contents > strong {
+section.about-me .right-group .pin-wrap .intro__con--who .contents > strong {
   display: block;
   font-weight: 700;
   font-size: 1.25rem;
   margin-bottom: 12px;
 }
-section.about-me .intro__con--who .contents .textbox {
+section.about-me .right-group .pin-wrap .intro__con--who .contents .textbox {
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
-section.about-me .intro__con--who .contents .textbox > div {
+section.about-me .right-group .pin-wrap .intro__con--who .contents .textbox > div {
   display: flex;
   flex-direction: column;
   gap: 14px;
   font-size: 0.875rem;
 }
-section.about-me .intro__con--who .contents .textbox > div > p {
+section.about-me .right-group .pin-wrap .intro__con--who .contents .textbox > div > p {
   display: flex;
   gap: 16px;
 }
-section.about-me .intro__con--who .contents .textbox > div > p span {
+section.about-me .right-group .pin-wrap .intro__con--who .contents .textbox > div > p span {
   font-weight: 700;
 }
-section.about-me .intro__con--skills .contents {
+@media (min-width: 800px) {
+  section.about-me .right-group .pin-wrap .intro__con--skills {
+    padding-left: 4px;
+    box-sizing: border-box;
+  }
+}
+section.about-me .right-group .pin-wrap .intro__con--skills .contents {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-section.about-me .intro__con--skills .contents > p::before {
+section.about-me .right-group .pin-wrap .intro__con--skills .contents > p::before {
   display: block;
   content: "";
   width: 10px;
@@ -750,14 +799,14 @@ section.about-me .intro__con--skills .contents > p::before {
   background-color: var(--color-text-weak);
   margin-bottom: 20px;
 }
-section.about-me .intro__con--skills .contents > p > span {
+section.about-me .right-group .pin-wrap .intro__con--skills .contents > p > span {
   display: inline-block;
   padding: 0.25rem 0.825rem;
   border: 1px solid var(--color-text-weak);
   transform: skewX(-8deg);
   margin: 0.2rem 0.05rem;
 }
-section.about-me .intro__con--history .contents {
+section.about-me .right-group .pin-wrap .intro__con--history .contents {
   display: flex;
   flex-direction: column;
   gap: 8px;
