--- a/style/scss/sections/_about.scss
+++ b/style/scss/sections/_about.scss
@@ -2,194 +2,241 @@
 @use '../base/mixins';
 
 section.about-me {
-  display: flex;
-  gap: 100px;
-  padding: 150px 16px 100px;
   background: var(--color-bg-aboutme);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 130px 16px 100px;
 
-  .left-group {
-    &__top {
-      position: relative;
-      margin-bottom: 20px;
 
-      h2 {
-        position: absolute;
-        left: 0;
-        top: 60px;
-        font-size: 64px;
-        font-weight: 700;
-        text-align: right;
-        line-height: 0.65;
-
-        &::before {
-          position: absolute;
-          left: 66px;
-          top: -38px;
-          display: block;
-          content: '';
-          width: 50px;
-          height: 45px;
-          background-image: url("../../../images/thumb-up.svg");
-          background-repeat: none;
-        }
-      }
-
-      .photobox {
-        position: relative;
-        width: 250px;
-        height: 400px;
-        box-sizing: border-box;
-        border-radius: 300px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        // margin-left: 106px;
-
-        &::after {
-          position: absolute;
-          right: 40px;
-          bottom: 40px;
-          display: block;
-          content: '';
-          width: 20px;
-          height: 19px;
-          background-image: url("../../../images/heart-red.svg");
-          background-repeat: none;
-        }
-
-        .img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: center;
-        }
-      }
-    }
-
-    &__bottom {
-      // margin-left: 106px; //.photo-box 의 margin 따라갈 것
-
-      p {
-        font-size: 0.75rem;
-        text-align: center;
-        margin-bottom: 16px;
-      }
-
-      .links {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-
-        &::before {
-          position: absolute;
-          left: 50%;
-          top: -8px;
-          transform: translateX(-50%);
-          display: block;
-          content: "";
-          width: 10px;
-          height: 1px;
-          background-color: var(--color-text-primary);
-        }
-
-        a {
-          svg {
-            fill: var(--color--icon);
-          }
-
-          @include mixins.hover {
-            &:hover {
-              svg {
-                fill: var(--color-icon-hover);
-              }
-            }
-          }
-        }
-      }
-    }
+  @include mixins.respond(md) {
+    flex-direction: row;
+    gap: 50px;
+    padding: 200px 16px 150px;
+    height: 100vh;
+  }
+  @include mixins.respond(lg) {
+    gap: 100px;
   }
 
-  .intro {
-    &__con {
-      h3 {
-        font-family: var(--font-english);
-        font-weight: 400;
-        font-size: 1.5rem;
-        color: var(--color-text-emphasis);
-        margin-bottom: 30px;
+  .left-group {
+    position: relative;
+    margin-bottom: 20px;
+
+    @include mixins.respond(md) {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      flex: 0 0 250px;
+    }
+
+    @include mixins.respond(lg) {
+      flex: 0 0 358px;
+    }
+
+
+    h2 {
+      display: inline-block;
+      position: absolute;
+      left: 0;
+      top: 60px;
+      text-align: right;
+      font-size: 54px;
+      font-weight: 700;
+      line-height: 0.65;
+
+      @include mixins.respond(md) {}
+
+      @include mixins.respond(lg) {
+        font-size: 64px;
       }
 
-      &--who {
-        .contents {
-          >strong {
+
+      &::before {
+        position: absolute;
+        left: 56px;
+        top: -38px;
+        display: block;
+        content: '';
+        width: 50px;
+        height: 45px;
+        background-image: url("../../../images/thumb-up.svg");
+        background-size: contain;
+        background-repeat: none;
+
+        @include mixins.respond(lg) {
+          width: 50px;
+          height: 45px;
+          left: 66px;
+          top: -38px;
+
+        }
+      }
+    }
+
+    .contents {
+      @include mixins.respond(lg) {
+        margin-left: 33%;
+      }
+
+      >img {
+        border-radius: 200px;
+      }
+
+      .bottom {
+        margin-top: 20px;
+
+        p {
+          font-size: 0.75rem;
+          text-align: center;
+          margin-bottom: 16px;
+        }
+
+        .links {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          gap: 12px;
+
+          &::before {
+            position: absolute;
+            left: 50%;
+            top: -8px;
+            transform: translateX(-50%);
             display: block;
-            font-weight: 700;
-            font-size: 1.25rem;
-            margin-bottom: 12px;
+            content: "";
+            width: 10px;
+            height: 1px;
+            background-color: var(--color-text-primary);
           }
 
-          .textbox{
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
+          a {
+            svg {
+              fill: var(--color--icon);
+            }
 
-            >div{
-              display: flex;
-              flex-direction: column;
-              gap: 14px;
-              font-size: 0.875rem;
-
-              >p{
-                display: flex;
-                gap: 16px;
-                span{
-                  font-weight: 700;
+            @include mixins.hover {
+              &:hover {
+                svg {
+                  fill: var(--color-icon-hover);
                 }
               }
             }
           }
         }
       }
+    }
+  }
 
-      &--skills{
-        .contents{
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
+  .right-group {
+    .pin-wrap {
+      overflow: hidden;
+      background-color: aqua;
 
-          >p{
+      @include mixins.respond(md) {
+        max-width: 530px;
+      }
 
-            &::before{
-              display: block;
-              content: "";
-              width: 10px;
-              height: 1px;
-              background-color: var(--color-text-weak);
-              margin-bottom: 20px; //부모 .contents 의 gap 크기 따라가기
+      .intro {
+        display: flex;
+        flex-wrap: nowrap;
+
+
+
+        &__con {
+          flex: 0 0 100%;
+
+          @include mixins.respond(md) {
+            padding-right: 100px;
+            box-sizing: border-box;
+          }
+
+          h3 {
+            font-family: var(--font-english);
+            font-weight: 400;
+            font-size: 1.5rem;
+            color: var(--color-text-emphasis);
+            margin-bottom: 30px;
+          }
+
+          &--who {
+            .contents {
+              >strong {
+                display: block;
+                font-weight: 700;
+                font-size: 1.25rem;
+                margin-bottom: 12px;
+              }
+
+              .textbox {
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                >div {
+                  display: flex;
+                  flex-direction: column;
+                  gap: 14px;
+                  font-size: 0.875rem;
+
+                  >p {
+                    display: flex;
+                    gap: 16px;
+
+                    span {
+                      font-weight: 700;
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+          &--skills {
+            @include mixins.respond(md) {
+              padding-left: 4px;
+              box-sizing: border-box;
             }
 
-            >span{
-              display: inline-block;
-              padding: 0.25rem 0.825rem;
-              border: 1px solid var(--color-text-weak);
-              transform: skewX(-8deg);
-              margin: 0.2rem 0.05rem;
+            .contents {
+              display: flex;
+              flex-direction: column;
+              gap: 20px;
+
+              >p {
+
+                &::before {
+                  display: block;
+                  content: "";
+                  width: 10px;
+                  height: 1px;
+                  background-color: var(--color-text-weak);
+                  margin-bottom: 20px; //부모 .contents 의 gap 크기 따라가기
+                }
+
+                >span {
+                  display: inline-block;
+                  padding: 0.25rem 0.825rem;
+                  border: 1px solid var(--color-text-weak);
+                  transform: skewX(-8deg);
+                  margin: 0.2rem 0.05rem;
+                }
+              }
+            }
+          }
+
+          &--history {
+            .contents {
+              display: flex;
+              flex-direction: column;
+              gap: 8px;
             }
           }
         }
       }
 
-      &--history{
-        .contents{
-          display: flex;
-          flex-direction: column;
-          gap: 8px;
-        }
-      }
-
-
     }
   }
+
 }
