--- a/style/scss/sections/_hero.scss
+++ b/style/scss/sections/_hero.scss
@@ -10,7 +10,7 @@ section.hero {
   min-height: 650px;
   max-height: 800px;
   box-sizing: border-box;
-  padding: 100px 0 150px;
+  padding: 56px 0 150px;
   text-align: center;
 
   .hero-name {
@@ -106,6 +106,7 @@ section.hero {
     left: 50%;
     bottom: 0;
     transform: translate(-50%, 50%);
+    z-index: 10;
     
     .sticker__inner{
       display: flex;
